trunk/Archive2/47/6a49d55bf31ae0/output
main.cpp: In function 'int main()':
main.cpp:12:33: error: 'make_unique' was not declared in this scope
     std::unique_ptr<Shader> s = make_unique<Shader>(_name);
                                 ^
main.cpp:12:33: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/memory:81:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/unique_ptr.h:776:5: note:   'std::make_unique'
     make_unique(_Args&&...) = delete;
     ^
main.cpp:12:51: error: expected primary-expression before '>' token
     std::unique_ptr<Shader> s = make_unique<Shader>(_name);
                                                   ^
